# Ling-Ling

./: .gitignore  CMakeLists.txt  LLPP.sln  README.md
LLPP/: .clang-format  LLPP.vcxproj  LLPP.vcxproj.filters  test.db
LLPP/src/: config.json  main.cpp
LLPP/src/auth/: auth.cpp  auth.h
LLPP/src/bots/boss/brood/: brood.cpp  brood.h  embeds.cpp  embeds.h
LLPP/src/bots/boss/common/: crate_collect.cpp  crate_collect.h  element_deposit.cpp  element_deposit.h
LLPP/src/bots/common/: artifactstation.cpp  artifactstation.h  renderstation.cpp  renderstation.h  suicidestation.cpp  suicidestation.h
LLPP/src/bots/crafting/: arbstation.cpp  arbstation.h  basepowderstation.cpp  basepowderstation.h  craftingmanager.cpp  craftingmanager.h  embeds.cpp  embeds.h  forgestation.cpp  forgestation.h  grindstation.cpp  grindstation.h  gunpowderstation.cpp  gunpowderstation.h  sparkpowderstation.cpp  sparkpowderstation.h  sparkstation.cpp  sparkstation.h
LLPP/src/bots/drops/: bed_crate_station.cpp  bed_crate_station.h  checkmark_green.h  commands.cpp  commands.h  config.h  crateembeds.cpp  crateembeds.h  cratemanager.cpp  cratemanager.h  cratestation.cpp  cratestation.h  dropoffstation.cpp  dropoffstation.h  embeds.cpp  embeds.h  exceptions.cpp  exceptions.h  item_priorities.h  lootcratestation.cpp  lootcratestation.h  lootresult.h  parameters.h  teleport_crate_station.cpp  teleport_crate_station.h
LLPP/src/bots/farm/: commands.cpp  farmbot.cpp  farmbot.h
LLPP/src/bots/farm/common/: collectstation.cpp  collectstation.h  config.h  data.cpp  data.h  exceptions.h  mountstation.cpp  mountstation.h  unloadstation.cpp  unloadstation.h
LLPP/src/bots/farm/metal/: commands.cpp  commands.h  metalmanager.cpp  metalmanager.h  metalstation.cpp  metalstation.h
LLPP/src/bots/farm/obsidian/: commands.cpp  commands.h  obsidianmanager.cpp  obsidianmanager.h  obsidianstation.cpp  obsidianstation.h
LLPP/src/bots/farm/swingbot/: commands.cpp  commands.h  farmbot.cpp  farmbot.h
LLPP/src/bots/farm/wood/: commands.cpp  commands.h  woodmanager.cpp  woodmanager.h  woodstation.cpp  woodstation.h
LLPP/src/bots/forges/: config.h  data.cpp  data.h  forgemanager.cpp  forgemanager.h  forgestation.cpp  forgestation.h  loadupstation.cpp  loadupstation.h  unloadstation.cpp  unloadstation.h
LLPP/src/bots/kitchen/: cropmanager.cpp  cropmanager.h  cropstation.cpp  cropstation.h  embeds.cpp  embeds.h  sapmanager.cpp  sapmanager.h  sapstation.cpp  sapstation.h
LLPP/src/bots/metal/: collectstation.cpp  collectstation.h  config.h  data.cpp  data.h  metalmanager.cpp  metalmanager.h  metalstation.cpp  metalstation.h  unloadstation.cpp  unloadstation.h
LLPP/src/bots/parasaur/: bed_parasaur_station.cpp  bed_parasaur_station.h  config.h  embeds.cpp  embeds.h  parasaur_station_result.h  parasaurmanager.cpp  parasaurmanager.h  parasaurstation.cpp  parasaurstation.h  teleport_parasaur_station.cpp  teleport_parasaur_station.h
LLPP/src/bots/paste/: embeds.cpp  embeds.h  exceptions.cpp  exceptions.h  grindstation.cpp  grindstation.h  pasteembeds.cpp  pastemanager.cpp  pastemanager.h  pastestation.cpp  pastestation.h  pastestationmanager.cpp  pastestationmanager.h
LLPP/src/bots/phoenix/: embeds.cpp  embeds.h  phoenixmanager.cpp  phoenixmanager.h  phoenixstation.cpp  phoenixstation.h
LLPP/src/bots/render/: renderstation.cpp  renderstation.h
LLPP/src/bots/suicide/: suicideembed.cpp  suicideembed.h  suicidestation.cpp  suicidestation.h
LLPP/src/common/: hsvfilter.h  hsvtester.cpp  hsvtester.h  util.cpp  util.h  webhook.cpp  webhook.h
LLPP/src/config/: config.cpp  config.h  config.json  managedvar.cpp  managedvar.h  required.h
LLPP/src/core/: basestation.cpp  basestation.h  basestationmanager.cpp  basestationmanager.h  bedstation.cpp  bedstation.h  discord.cpp  discord.h  istationmanager.h  recovery.cpp  recovery.h  station.cpp  station.h  stationresult.h  task.cpp  task.h  taskmanager.cpp  taskmanager.h  teleportstation.cpp  teleportstation.h  webhook.cpp  webhook.h
LLPP/src/core/data/: database.cpp  database.h  managedvar.cpp  managedvar.h
LLPP/src/discord/: bot.cpp  bot.h  dashboard.cpp  dashboard.h  embeds.cpp  embeds.h  helpers.cpp  helpers.h  icons.h
LLPP/src/discord/commands/: commands.cpp  commands.h  managedcommand.cpp  managedcommand.h
LLPP/src/discord/tribelogs/: alerts.cpp  alerts.h  handler.cpp  handler.h  stream.cpp  stream.h
LLPP/src/gui/: common.cpp  common.h  custom.cpp  custom.h  gui.cpp  gui.h  parasaur.cpp  parasaur.h  state.h  tabs.h  util.cpp  util.h
LLPP/src/gui/bots/: farm.cpp  farm.h  metal.cpp  parasaur.cpp  parasaur.h  paste.cpp  paste.h
LLPP/src/gui/custom/: clampedint.cpp  clampedint.h  combo_dynamic.cpp  combo_dynamic.h  dialogs.cpp  dialogs.h
bot/: CMakeLists.txt
bot/src/: main.cpp  utility.h
bot/src/configuration/: common.cpp  common.h  exceptions.h  managedvar.h  validate.cpp  validate.h
bot/src/core/: bedstation.h  config.cpp  config.h  exceptions.h  startup.cpp  startup.h  state.cpp  state.h  teleportstation.cpp  teleportstation.h
bot/src/integration/discord/: config.h  dashboard.cpp  dashboard.h  discord.cpp  discord.h  format.cpp  format.h
bot/src/integration/discord/commands/: common.cpp  common.h  config.cpp  config.h  setup.cpp  setup.h  tribelogrole.cpp  tribelogrole.h
bot/src/integration/webhook/: webhook.h
bot/src/integrations/discord/: config.cpp  config.h  discord.cpp  discord.h
bot/src/integrations/discord/commands/: common.h  config.h  setup.cpp  setup.h
bot/src/modules/gacha/: config.cpp  config.h  discord.cpp  discord.h  gacha.cpp  gacha.h  taskprovider.cpp
bot/src/modules/gacha/stations/: feedstation.cpp  feedstation.h  seedstation.cpp  seedstation.h
bot/src/modules/gacha/tasks/: collection_task.h  feeding_task.h
bot/src/tasksystem/: config.cpp  config.h  discord.cpp  discord.h  executor.cpp  executor.h  persistenttask.cpp  persistenttask.h  queue.cpp  queue.h  task.cpp  task.h  tasksystem.cpp  tasksystem.h
bot/src/utility/: utility.cpp  utility.h
src/: config.json  main.cpp
